--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "homepage": "https//dylangriess.github.io/DG-Professional-Portfolio",
+  "homepage": "https://dylangriess.github.io/DG-Professional-Portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
