--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "ATG",
-  "name": "ATG Workouts",
+  "short_name": "Portfolio",
+  "name": "Dylan Griess Professional Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
